--- a/Expt 4/drugs.ipynb
+++ b/Expt 4/drugs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "4   61   F     LOW        HIGH   18.043  drugY"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "Name: Drug, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x249a8fdddc0>"
+       "<matplotlib.collections.PathCollection at 0x249a9858400>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "4     OLD   F     LOW        HIGH   18.043  drugY"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "Name: Age, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "Name: Age, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "Name: Na_to_K, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,16 +412,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x249a97a6790>"
+       "<matplotlib.collections.PathCollection at 0x249a98cb280>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "Name: Na_to_K, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "Name: Na_to_K, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "4     OLD   F     LOW        HIGH  MEDIUM  drugY"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "[200 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "Name: Drug, Length: 200, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -818,34 +818,28 @@
       "Na_to_K\n",
       "|-> LOW:\n",
       "\tBP\n",
-      "\t|-> NORMAL:\n",
-      "\t\tdrugX\n",
-      "\n",
       "\t|-> HIGH:\n",
       "\t\tAge\n",
-      "\t\t|-> MIDDLE:\n",
-      "\t\t\tCholesterol\n",
-      "\t\t\t|-> NORMAL:\n",
-      "\t\t\t\tdrugA\n",
-      "\n",
-      "\t\t\t|-> HIGH:\n",
-      "\t\t\t\tdrugA\n",
-      "\n",
-      "\n",
       "\t\t|-> OLD:\n",
       "\t\t\tdrugB\n",
+      "\n",
+      "\t\t|-> MIDDLE:\n",
+      "\t\t\tdrugA\n",
       "\n",
       "\t\t|-> YOUNG:\n",
       "\t\t\tdrugA\n",
       "\n",
       "\n",
+      "\t|-> NORMAL:\n",
+      "\t\tdrugX\n",
+      "\n",
       "\t|-> LOW:\n",
       "\t\tCholesterol\n",
-      "\t\t|-> HIGH:\n",
-      "\t\t\tdrugC\n",
-      "\n",
       "\t\t|-> NORMAL:\n",
       "\t\t\tdrugX\n",
+      "\n",
+      "\t\t|-> HIGH:\n",
+      "\t\t\tdrugC\n",
       "\n",
       "\n",
       "\n",
@@ -856,11 +850,8 @@
       "\tBP\n",
       "\t|-> HIGH:\n",
       "\t\tAge\n",
-      "\t\t|-> MIDDLE:\n",
+      "\t\t|-> YOUNG:\n",
       "\t\t\tCholesterol\n",
-      "\t\t\t|-> HIGH:\n",
-      "\t\t\t\tdrugA\n",
-      "\n",
       "\t\t\t|-> NORMAL:\n",
       "\t\t\t\tSex\n",
       "\t\t\t\t|-> F:\n",
@@ -869,6 +860,9 @@
       "\t\t\t\t|-> M:\n",
       "\t\t\t\t\tdrugY\n",
       "\n",
+      "\n",
+      "\t\t\t|-> HIGH:\n",
+      "\t\t\t\tdrugA\n",
       "\n",
       "\n",
       "\t\t|-> OLD:\n",
@@ -886,68 +880,98 @@
       "\t\t\t\tdrugB\n",
       "\n",
       "\n",
-      "\t\t|-> YOUNG:\n",
-      "\t\t\tCholesterol\n",
-      "\t\t\t|-> NORMAL:\n",
-      "\t\t\t\tdrugY\n",
+      "\t\t|-> MIDDLE:\n",
+      "\t\t\tSex\n",
+      "\t\t\t|-> M:\n",
+      "\t\t\t\tCholesterol\n",
+      "\t\t\t\t|-> NORMAL:\n",
+      "\t\t\t\t\tdrugY\n",
       "\n",
-      "\t\t\t|-> HIGH:\n",
-      "\t\t\t\tdrugA\n",
+      "\t\t\t\t|-> HIGH:\n",
+      "\t\t\t\t\tdrugY\n",
+      "\n",
+      "\n",
+      "\t\t\t|-> F:\n",
+      "\t\t\t\tCholesterol\n",
+      "\t\t\t\t|-> HIGH:\n",
+      "\t\t\t\t\tdrugA\n",
+      "\n",
+      "\t\t\t\t|-> NORMAL:\n",
+      "\t\t\t\t\tdrugY\n",
+      "\n",
       "\n",
       "\n",
       "\n",
       "\t|-> NORMAL:\n",
       "\t\tAge\n",
       "\t\t|-> MIDDLE:\n",
-      "\t\t\tSex\n",
-      "\t\t\t|-> F:\n",
-      "\t\t\t\tCholesterol\n",
-      "\t\t\t\t|-> HIGH:\n",
-      "\t\t\t\t\tdrugY\n",
-      "\n",
-      "\t\t\t\t|-> NORMAL:\n",
-      "\t\t\t\t\tdrugY\n",
-      "\n",
-      "\n",
-      "\t\t\t|-> M:\n",
-      "\t\t\t\tCholesterol\n",
-      "\t\t\t\t|-> HIGH:\n",
-      "\t\t\t\t\tdrugX\n",
-      "\n",
-      "\t\t\t\t|-> NORMAL:\n",
-      "\t\t\t\t\tdrugX\n",
-      "\n",
-      "\n",
-      "\n",
-      "\t\t|-> OLD:\n",
-      "\t\t\tSex\n",
-      "\t\t\t|-> M:\n",
+      "\t\t\tCholesterol\n",
+      "\t\t\t|-> HIGH:\n",
       "\t\t\t\tdrugY\n",
+      "\n",
+      "\t\t\t|-> NORMAL:\n",
+      "\t\t\t\tdrugY\n",
+      "\n",
+      "\n",
+      "\t\t|-> YOUNG:\n",
+      "\t\t\tSex\n",
+      "\t\t\t|-> M:\n",
+      "\t\t\t\tCholesterol\n",
+      "\t\t\t\t|-> HIGH:\n",
+      "\t\t\t\t\tdrugX\n",
+      "\n",
+      "\t\t\t\t|-> NORMAL:\n",
+      "\t\t\t\t\tdrugX\n",
+      "\n",
       "\n",
       "\t\t\t|-> F:\n",
       "\t\t\t\tdrugX\n",
       "\n",
       "\n",
-      "\t\t|-> YOUNG:\n",
-      "\t\t\tdrugX\n",
+      "\t\t|-> OLD:\n",
+      "\t\t\tSex\n",
+      "\t\t\t|-> F:\n",
+      "\t\t\t\tdrugX\n",
+      "\n",
+      "\t\t\t|-> M:\n",
+      "\t\t\t\tdrugY\n",
+      "\n",
       "\n",
       "\n",
       "\t|-> LOW:\n",
-      "\t\tCholesterol\n",
-      "\t\t|-> HIGH:\n",
-      "\t\t\tAge\n",
-      "\t\t\t|-> MIDDLE:\n",
+      "\t\tAge\n",
+      "\t\t|-> MIDDLE:\n",
+      "\t\t\tSex\n",
+      "\t\t\t|-> M:\n",
+      "\t\t\t\tCholesterol\n",
+      "\t\t\t\t|-> HIGH:\n",
+      "\t\t\t\t\tdrugY\n",
+      "\n",
+      "\t\t\t\t|-> NORMAL:\n",
+      "\t\t\t\t\tdrugY\n",
+      "\n",
+      "\n",
+      "\t\t\t|-> F:\n",
       "\t\t\t\tdrugY\n",
       "\n",
-      "\t\t\t|-> YOUNG:\n",
+      "\n",
+      "\t\t|-> OLD:\n",
+      "\t\t\tCholesterol\n",
+      "\t\t\t|-> HIGH:\n",
+      "\t\t\t\tdrugY\n",
+      "\n",
+      "\t\t\t|-> NORMAL:\n",
+      "\t\t\t\tdrugX\n",
+      "\n",
+      "\n",
+      "\t\t|-> YOUNG:\n",
+      "\t\t\tCholesterol\n",
+      "\t\t\t|-> HIGH:\n",
       "\t\t\t\tdrugC\n",
       "\n",
-      "\t\t\t|-> OLD:\n",
-      "\t\t\t\tdrugY\n",
+      "\t\t\t|-> NORMAL:\n",
+      "\t\t\t\tdrugX\n",
       "\n",
-      "\n",
-      "\t\t|-> NORMAL:\n",
-      "\t\t\tdrugX\n",
       "\n",
       "\n",
       "\n"
@@ -962,16 +986,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "77.5"
+       "80.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,16 +1006,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "132"
+       "96"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,16 +1027,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'drugX'"
+       "'drugY'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,16 +1047,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'drugX'"
+       "'drugY'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
