--- a/4. Descision Trees/drugs.ipynb
+++ b/4. Descision Trees/drugs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "4   61   F     LOW        HIGH   18.043  drugY"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "Name: Drug, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x249a9858400>"
+       "<matplotlib.collections.PathCollection at 0x25562c0aa30>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "4     OLD   F     LOW        HIGH   18.043  drugY"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "Name: Age, dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "Name: Age, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "Name: Na_to_K, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,16 +412,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x249a98cb280>"
+       "<matplotlib.collections.PathCollection at 0x2556337fe80>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "Name: Na_to_K, dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "Name: Na_to_K, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "4     OLD   F     LOW        HIGH  MEDIUM  drugY"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "[200 rows x 5 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "Name: Drug, Length: 200, dtype: object"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,203 +799,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_X, testing_X, training_y, testing_Y = train_test_split(training,target,train_size=0.8)"
+    "training_X, testing_X, training_y, testing_Y = train_test_split(training,target,train_size=0.75)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Na_to_K\n",
-      "|-> LOW:\n",
-      "\tBP\n",
-      "\t|-> HIGH:\n",
-      "\t\tAge\n",
-      "\t\t|-> OLD:\n",
-      "\t\t\tdrugB\n",
-      "\n",
-      "\t\t|-> MIDDLE:\n",
-      "\t\t\tdrugA\n",
-      "\n",
-      "\t\t|-> YOUNG:\n",
-      "\t\t\tdrugA\n",
-      "\n",
-      "\n",
-      "\t|-> NORMAL:\n",
-      "\t\tdrugX\n",
-      "\n",
-      "\t|-> LOW:\n",
-      "\t\tCholesterol\n",
-      "\t\t|-> NORMAL:\n",
-      "\t\t\tdrugX\n",
-      "\n",
-      "\t\t|-> HIGH:\n",
-      "\t\t\tdrugC\n",
-      "\n",
-      "\n",
-      "\n",
-      "|-> HIGH:\n",
-      "\tdrugY\n",
-      "\n",
-      "|-> MEDIUM:\n",
-      "\tBP\n",
-      "\t|-> HIGH:\n",
-      "\t\tAge\n",
-      "\t\t|-> YOUNG:\n",
-      "\t\t\tCholesterol\n",
-      "\t\t\t|-> NORMAL:\n",
-      "\t\t\t\tSex\n",
-      "\t\t\t\t|-> F:\n",
-      "\t\t\t\t\tdrugY\n",
-      "\n",
-      "\t\t\t\t|-> M:\n",
-      "\t\t\t\t\tdrugY\n",
-      "\n",
-      "\n",
-      "\t\t\t|-> HIGH:\n",
-      "\t\t\t\tdrugA\n",
-      "\n",
-      "\n",
-      "\t\t|-> OLD:\n",
-      "\t\t\tCholesterol\n",
-      "\t\t\t|-> HIGH:\n",
-      "\t\t\t\tSex\n",
-      "\t\t\t\t|-> M:\n",
-      "\t\t\t\t\tdrugB\n",
-      "\n",
-      "\t\t\t\t|-> F:\n",
-      "\t\t\t\t\tdrugY\n",
-      "\n",
-      "\n",
-      "\t\t\t|-> NORMAL:\n",
-      "\t\t\t\tdrugB\n",
-      "\n",
-      "\n",
-      "\t\t|-> MIDDLE:\n",
-      "\t\t\tSex\n",
-      "\t\t\t|-> M:\n",
-      "\t\t\t\tCholesterol\n",
-      "\t\t\t\t|-> NORMAL:\n",
-      "\t\t\t\t\tdrugY\n",
-      "\n",
-      "\t\t\t\t|-> HIGH:\n",
-      "\t\t\t\t\tdrugY\n",
-      "\n",
-      "\n",
-      "\t\t\t|-> F:\n",
-      "\t\t\t\tCholesterol\n",
-      "\t\t\t\t|-> HIGH:\n",
-      "\t\t\t\t\tdrugA\n",
-      "\n",
-      "\t\t\t\t|-> NORMAL:\n",
-      "\t\t\t\t\tdrugY\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\t|-> NORMAL:\n",
-      "\t\tAge\n",
-      "\t\t|-> MIDDLE:\n",
-      "\t\t\tCholesterol\n",
-      "\t\t\t|-> HIGH:\n",
-      "\t\t\t\tdrugY\n",
-      "\n",
-      "\t\t\t|-> NORMAL:\n",
-      "\t\t\t\tdrugY\n",
-      "\n",
-      "\n",
-      "\t\t|-> YOUNG:\n",
-      "\t\t\tSex\n",
-      "\t\t\t|-> M:\n",
-      "\t\t\t\tCholesterol\n",
-      "\t\t\t\t|-> HIGH:\n",
-      "\t\t\t\t\tdrugX\n",
-      "\n",
-      "\t\t\t\t|-> NORMAL:\n",
-      "\t\t\t\t\tdrugX\n",
-      "\n",
-      "\n",
-      "\t\t\t|-> F:\n",
-      "\t\t\t\tdrugX\n",
-      "\n",
-      "\n",
-      "\t\t|-> OLD:\n",
-      "\t\t\tSex\n",
-      "\t\t\t|-> F:\n",
-      "\t\t\t\tdrugX\n",
-      "\n",
-      "\t\t\t|-> M:\n",
-      "\t\t\t\tdrugY\n",
-      "\n",
-      "\n",
-      "\n",
-      "\t|-> LOW:\n",
-      "\t\tAge\n",
-      "\t\t|-> MIDDLE:\n",
-      "\t\t\tSex\n",
-      "\t\t\t|-> M:\n",
-      "\t\t\t\tCholesterol\n",
-      "\t\t\t\t|-> HIGH:\n",
-      "\t\t\t\t\tdrugY\n",
-      "\n",
-      "\t\t\t\t|-> NORMAL:\n",
-      "\t\t\t\t\tdrugY\n",
-      "\n",
-      "\n",
-      "\t\t\t|-> F:\n",
-      "\t\t\t\tdrugY\n",
-      "\n",
-      "\n",
-      "\t\t|-> OLD:\n",
-      "\t\t\tCholesterol\n",
-      "\t\t\t|-> HIGH:\n",
-      "\t\t\t\tdrugY\n",
-      "\n",
-      "\t\t\t|-> NORMAL:\n",
-      "\t\t\t\tdrugX\n",
-      "\n",
-      "\n",
-      "\t\t|-> YOUNG:\n",
-      "\t\t\tCholesterol\n",
-      "\t\t\t|-> HIGH:\n",
-      "\t\t\t\tdrugC\n",
-      "\n",
-      "\t\t\t|-> NORMAL:\n",
-      "\t\t\t\tdrugX\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dt = DescisionTree(training_X=training_X,training_y=training_y)\n",
-    "dt.train()\n",
-    "dt.view_tree()"
+    "dt.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "80.0"
+       "88.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,16 +838,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "96"
+       "19"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +868,7 @@
        "'drugY'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1056,13 +888,140 @@
        "'drugY'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "target.iloc[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Na_to_K\n",
+      "|-> MEDIUM:\n",
+      "|\tBP\n",
+      "|\t|-> HIGH:\n",
+      "|\t|\tAge\n",
+      "|\t|\t|-> YOUNG:\n",
+      "|\t|\t|\tCholesterol\n",
+      "|\t|\t|\t|-> NORMAL:\n",
+      "|\t|\t|\t|\tSex\n",
+      "|\t|\t|\t|\t|-> F:\n",
+      "|\t|\t|\t|\t|\tdrugY\n",
+      "|\t|\t|\t|\t|-> M:\n",
+      "|\t|\t|\t|\t|\tdrugY\n",
+      "|\t|\t|\t|-> HIGH:\n",
+      "|\t|\t|\t|\tdrugA\n",
+      "|\t|\t|-> MIDDLE:\n",
+      "|\t|\t|\tSex\n",
+      "|\t|\t|\t|-> F:\n",
+      "|\t|\t|\t|\tCholesterol\n",
+      "|\t|\t|\t|\t|-> HIGH:\n",
+      "|\t|\t|\t|\t|\tdrugA\n",
+      "|\t|\t|\t|\t|-> NORMAL:\n",
+      "|\t|\t|\t|\t|\tdrugY\n",
+      "|\t|\t|\t|-> M:\n",
+      "|\t|\t|\t|\tCholesterol\n",
+      "|\t|\t|\t|\t|-> NORMAL:\n",
+      "|\t|\t|\t|\t|\tdrugY\n",
+      "|\t|\t|\t|\t|-> HIGH:\n",
+      "|\t|\t|\t|\t|\tdrugY\n",
+      "|\t|\t|-> OLD:\n",
+      "|\t|\t|\tCholesterol\n",
+      "|\t|\t|\t|-> HIGH:\n",
+      "|\t|\t|\t|\tSex\n",
+      "|\t|\t|\t|\t|-> M:\n",
+      "|\t|\t|\t|\t|\tdrugB\n",
+      "|\t|\t|\t|\t|-> F:\n",
+      "|\t|\t|\t|\t|\tdrugB\n",
+      "|\t|\t|\t|-> NORMAL:\n",
+      "|\t|\t|\t|\tdrugY\n",
+      "|\t|-> NORMAL:\n",
+      "|\t|\tAge\n",
+      "|\t|\t|-> MIDDLE:\n",
+      "|\t|\t|\tSex\n",
+      "|\t|\t|\t|-> F:\n",
+      "|\t|\t|\t|\tCholesterol\n",
+      "|\t|\t|\t|\t|-> HIGH:\n",
+      "|\t|\t|\t|\t|\tdrugY\n",
+      "|\t|\t|\t|\t|-> NORMAL:\n",
+      "|\t|\t|\t|\t|\tdrugY\n",
+      "|\t|\t|\t|-> M:\n",
+      "|\t|\t|\t|\tCholesterol\n",
+      "|\t|\t|\t|\t|-> HIGH:\n",
+      "|\t|\t|\t|\t|\tdrugX\n",
+      "|\t|\t|\t|\t|-> NORMAL:\n",
+      "|\t|\t|\t|\t|\tdrugY\n",
+      "|\t|\t|-> OLD:\n",
+      "|\t|\t|\tSex\n",
+      "|\t|\t|\t|-> F:\n",
+      "|\t|\t|\t|\tdrugX\n",
+      "|\t|\t|\t|-> M:\n",
+      "|\t|\t|\t|\tdrugY\n",
+      "|\t|\t|-> YOUNG:\n",
+      "|\t|\t|\tSex\n",
+      "|\t|\t|\t|-> M:\n",
+      "|\t|\t|\t|\tCholesterol\n",
+      "|\t|\t|\t|\t|-> HIGH:\n",
+      "|\t|\t|\t|\t|\tdrugY\n",
+      "|\t|\t|\t|\t|-> NORMAL:\n",
+      "|\t|\t|\t|\t|\tdrugX\n",
+      "|\t|\t|\t|-> F:\n",
+      "|\t|\t|\t|\tdrugX\n",
+      "|\t|-> LOW:\n",
+      "|\t|\tCholesterol\n",
+      "|\t|\t|-> HIGH:\n",
+      "|\t|\t|\tAge\n",
+      "|\t|\t|\t|-> OLD:\n",
+      "|\t|\t|\t|\tdrugY\n",
+      "|\t|\t|\t|-> MIDDLE:\n",
+      "|\t|\t|\t|\tdrugY\n",
+      "|\t|\t|\t|-> YOUNG:\n",
+      "|\t|\t|\t|\tdrugC\n",
+      "|\t|\t|-> NORMAL:\n",
+      "|\t|\t|\tdrugX\n",
+      "|-> HIGH:\n",
+      "|\tdrugY\n",
+      "|-> LOW:\n",
+      "|\tBP\n",
+      "|\t|-> HIGH:\n",
+      "|\t|\tAge\n",
+      "|\t|\t|-> MIDDLE:\n",
+      "|\t|\t|\tCholesterol\n",
+      "|\t|\t|\t|-> NORMAL:\n",
+      "|\t|\t|\t|\tSex\n",
+      "|\t|\t|\t|\t|-> M:\n",
+      "|\t|\t|\t|\t|\tdrugA\n",
+      "|\t|\t|\t|\t|-> F:\n",
+      "|\t|\t|\t|\t|\tdrugA\n",
+      "|\t|\t|\t|-> HIGH:\n",
+      "|\t|\t|\t|\tdrugA\n",
+      "|\t|\t|-> OLD:\n",
+      "|\t|\t|\tdrugB\n",
+      "|\t|\t|-> YOUNG:\n",
+      "|\t|\t|\tdrugA\n",
+      "|\t|-> LOW:\n",
+      "|\t|\tCholesterol\n",
+      "|\t|\t|-> NORMAL:\n",
+      "|\t|\t|\tdrugX\n",
+      "|\t|\t|-> HIGH:\n",
+      "|\t|\t|\tdrugC\n",
+      "|\t|-> NORMAL:\n",
+      "|\t|\tdrugX\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt.view_tree()"
    ]
   }
  ],
